[gd_scene load_steps=4 format=3 uid="uid://cnweglmw4s75y"]

[ext_resource type="Script" uid="uid://csxuvcbm56ni8" path="res://UI/RespawnScreen.gd" id="1"]

[sub_resource type="Animation" id="Animation_idle"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/FlashRect:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gxqcr"]
_data = {
&"idle": SubResource("Animation_idle")
}

[node name="RespawnScreen" type="CanvasLayer"]
layer = 50
script = ExtResource("1")

[node name="DeathViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1280, 720)
render_target_update_mode = 3

[node name="DeathCamera" type="Camera3D" parent="DeathViewport"]
projection = 1
size = 40.0
near = 0.1
far = 200.0

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="TextureRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch_mode = 2

[node name="Panel" type="MarginContainer" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -220.0
offset_right = 320.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Root"]
libraries = {
&"": SubResource("AnimationLibrary_gxqcr")
}
autoplay = "idle"

[node name="FlashRect" type="ColorRect" parent="."]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 0, 0, 0)

[node name="PanelBody" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 440)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -45.5
offset_right = 124.0
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "YOU HAVE FALLEN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CauseLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.5
offset_top = -11.5
offset_right = 99.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Cause of death: Unknown"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.5
offset_top = 19.5
offset_right = 69.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
text = "Respawning in 3..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
size_flags_horizontal = 4
alignment = 1

[node name="RespawnButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = 48.5
offset_right = 39.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Respawn"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = 87.5
offset_right = 21.0
offset_bottom = 118.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Quit"
